--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -371,8 +371,7 @@ en:
       forever: "Delete this project forever"
       owner: "Owner"
       owner_description: "The owner is the main responsible for a project. He cannot be removed from the project unless ownership is transferred to another user."
-      name: "Name <em>Keep it short and descriptive</em>"
-      name_description: "Choose a brief and descriptive title. For example: Taggart Transcontinental"
+      name: "Name <em>Keep it short and descriptive, for example: Taggart Transcontinental.</em>"
       permalink: "Permalink <em>Short identifier for the project</em>"
       permalink_description: "This will be the web address for your project. Keep it as short as possible. No spaces allowed."
       archived: Archive this Project
