Fix: Due date dropdown's default: anybody -> any time

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -672,7 +672,7 @@ en:
       anybody: Anybody
       my_tasks: My tasks
       unassigned: Unassigned
-      anytime: Anybody
+      anytime: Any time
       late_tasks: Late tasks
       no_date_assigned: No date assigned
       today: Today
