--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -204,7 +204,7 @@ ru:
     or: или
     print: "Распечатать страницу"
     save: Сохранить
-    show_more: "Показать ещё %{number}"
+    show_more: "Показать ещё"
   confirm: 
     delete_page: "Вы действительно хотите удалить эту страницу?"
     delete_task: "Вы действительно хотите удалить эту задачу?"
