--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,7 +15,7 @@ en:
     cancel: Cancel
     close: Close
     save: Save
-    show_more: Show %{number} more
+    show_more: Show more
     print: Print this page
     prev: Previous
     next: Next
