--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -792,7 +792,7 @@ en:
       project: "What are you working on? Share ideas, links, updates."
       conversation: "Send a message to the rest of the group."
       task_list: "Share ideas for this task list. To create and assign tasks, use the sidebar."
-      task: "Define what needs to be done by commenting. Assign this task to somebody. Post updates. Attach results."
+      task: "Define what needs to be done, assign this task to somebody."
     convert_form:
       name: "Enter a name for this task"
       destination: "Select the destination task list"
