--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -774,6 +774,8 @@ en:
       leave_project: "Leave this project"
       confirm_delete: Are you sure you want to leave this project?
   comments:
+    attach:
+      tooltip: Attach
     comment:
       commented_on: "-"
       commented_on_a_task_list: "-"
@@ -783,6 +785,7 @@ en:
       cannot_edit: "Comment cannot be edited after 15 minutes"
     hours:
       add_hours: Hours
+      tooltip: Add hours to this task
       hours: How many hours did you put into this task?
       time_tracking_docs: Learn how to use time-tracking
     new:
@@ -815,6 +818,7 @@ en:
       error: "Could not create example project."
       error_list: "Could not create example project. The following projects are invalid: %{list}."
   uploads:
+    tooltip: Upload a file
     comment_upload_link: Attachment
     new:
       select_a_file: Select a file
