Shorter "Describe your task" translations to fit in the new thinner textarea

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -177,7 +177,7 @@ de:
       conversation: "Schicken Sie eine Nachricht an alle Gruppenmitglieder."
       project: "Was machen Sie gerade? Teilen Sie Ideen, Links und Updates."
       submit: Kommentar
-      task: "Definieren Sie Arbeitsbedarfe durch Kommentare. Beauftragen Sie jemanden mit der Aufgabe. Geben Sie Statusupdates und hängen Sie aktuelle Erebnisse an."
+      task: "Definieren Sie Arbeitsbedarfe durch Kommentare."
       task_list: "Teilen Sie Ihre Meinung zu dieser Aufgabenliste. Um Aufgaben zu erstellen und zu verteilen, benutzen Sie das Seitenmenü."
   common: 
     accept: Annehmen
