--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -217,7 +217,7 @@ ja:
       conversation: グループにメッセージを送る
       project: "今何をしていますか? アイディアや、リンクや、状況などを共有しましょう。"
       submit: 保存
-      task: 何をする必要があるかを書いてください。誰かに割当てして、更新を投稿し、結果を添付してください。
+      task: 必要事項を記述下さい。担当割当可能です。
       task_list: このタスクリストへのアイディアを共有しましょう。タスクの作成と割当てには、サイドバーを使ってください。
   common: 
     accept: 了承
