--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -187,7 +187,7 @@ ru:
       conversation: "Отправьте сообщение всем в группе."
       project: "Что вы делаете? Поделитесь идеями, ссылками, обновлениями."
       submit: Отправить
-      task: "Опишите, что нужно сделать в комментариях. Назначьте задачу кому-нибудь. Post updates. Attach results."
+      task: "Что нужно сделать"
       task_list: "Поделитесь идеями насчёт списка задач. Чтобы создать список задач, воспользуйтесь управлением справа."
   common: 
     accept: Принять
