fix spanish translation on en.yml introduced on 3f79a33a4567b9f68fa7bc9c5f3563f8d666aff1

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1219,11 +1219,11 @@ en:
       upload: Upload
     attributes:
       address:
-        city: Ciudad
-        country: País
-        state: Provincia
-        street: Calle
-        zip: CP
+        city: City
+        country: Country
+        state: State
+        street: Street
+        zip: ZIP
       card:
         street: Street
         city: City
