Make it clear that page descriptions don't allow text styles.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -697,7 +697,7 @@ en:
       name: Name
       name_description: Choose a short and descriptive title
       description: Description
-      description_description: "Optional. Enter any information that people reading or editing this page should know."
+      description_description: "Optional short notes about it. Doesn't allow text styles."
     slots:
       insert_here: Insert Here
     column:
