Microcopy for new page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -689,7 +689,7 @@ en:
       feature4: "<b>Wiki</b>. Pages acts like a wiki, giving quick access to the project's information."
       footer1: "Use Teambox as your <b>shared whiteboard</b> for frequently used stuff."
       footer2: "You can also attach files to any page inside each note. Enjoy!"
-      submit: Create
+      submit: Create page
     edit:
       title: Edit Page
       submit: Update
